force-app/main/default/objects/Contract_Subject_Config__mdt/Contract_Subject_Config__mdt.object-meta.xml
<CustomObject>
    <label>Contract Subject Config</label>
    <pluralLabel>Contract Subject Configs</pluralLabel>
</CustomObject>