force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Additional_Insured_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insured_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Insured Required</label>
    <type>Checkbox</type>
</CustomField>