force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Allowed_Contract_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Contract_Types__c</fullName>
    <label>Allowed Contract Types</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>