force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Board_Approval_May_Apply__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval_May_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Approval May Apply</label>
    <type>Checkbox</type>
</CustomField>