force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Default_Approval_Path__c.field-meta.xml
<CustomField>
    <fullName>Default_Approval_Path__c</fullName>
    <label>Default Approval Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Section 3.2.1</fullName><default>false</default><label>Section 3.2.1</label></value>
            <value><fullName>Section 3.2.2</fullName><default>false</default><label>Section 3.2.2</label></value>
            <value><fullName>Section 3.2.3</fullName><default>false</default><label>Section 3.2.3</label></value>
            <value><fullName>Section 3.2.4</fullName><default>false</default><label>Section 3.2.4</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>