force-app/main/default/objects/Contract_Subject_Config__mdt/fields/ED_Can_Sole_Sign__c.field-meta.xml
<CustomField>
    <fullName>ED_Can_Sole_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ED Can Sole Sign</label>
    <type>Checkbox</type>
</CustomField>