force-app/main/default/objects/Contract_Subject_Config__mdt/fields/ED_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>ED_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ED Signature Required</label>
    <type>Checkbox</type>
</CustomField>