force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Gift_Acceptance_Review__c.field-meta.xml
<CustomField>
    <fullName>Gift_Acceptance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Acceptance Review</label>
    <type>Checkbox</type>
</CustomField>