force-app/main/default/objects/Contract_Subject_Config__mdt/fields/ICA_Approval_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>ICA_Approval_Form_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICA Approval Form Required</label>
    <type>Checkbox</type>
</CustomField>