force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Legal_Review_Timing_Above_10K__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Timing_Above_10K__c</fullName>
    <label>Legal Review Timing Above $10K</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Before Execution</fullName><default>false</default><label>Before Execution</label></value>
            <value><fullName>After Execution</fullName><default>false</default><label>After Execution</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>