force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Officer_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Officer_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Officer Signature Required</label>
    <type>Checkbox</type>
</CustomField>