force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <label>Subject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>