force-app/main/default/objects/Contract_Subject_Config__mdt/fields/SVP_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>SVP_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SVP Signature Required</label>
    <type>Checkbox</type>
</CustomField>