force-app/main/default/objects/Contract_Subject_Config__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>