force-app/main/default/objects/Contract_Subject_Config__mdt/fields/VP_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>VP_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VP Signature Required</label>
    <type>Checkbox</type>
</CustomField>