force-app/main/default/objects/Contract_Subject_Config__mdt/fields/YGSF_Template_Required__c.field-meta.xml
<CustomField>
    <fullName>YGSF_Template_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YGSF Template Required</label>
    <type>Checkbox</type>
</CustomField>